2007-03-10 Nicolas Roffet <nicolas-kde@roffet.com>
	* Added posibility to play with a non square grid: 18x12. First: this is fun, because the grid is really big! It's also useful to see how the graphic items are displayed in such a configuration and it helped me to find and fix a bug in the black box class. :)

2007-03-09 Nicolas Roffet <nicolas-kde@roffet.com>
	* Preparation for Oxygenation: There are now 4 different SVG items for the lasers (one for each direction) instead of just one (with intern rotations), the graphic widget has now a SVG background and the black box is now a full SVG item (not a QGraphicsRectItem with a SVG question mark anymore).

2007-03-03 Nicolas Roffet <nicolas-kde@roffet.com>
	* Removed the files of the old widget with QPixmap items. (Not used anymore)

2007-02-24 Nicolas Roffet <nicolas-kde@roffet.com>
	* Small "goody": New SVG items in the GraphicsView displaying the interactions of laser rays with every ball the player is moving the mouse over.

2007-02-18 Nicolas Roffet <nicolas-kde@roffet.com>
	* Clean-up in the class "KMainWindow".
	* Tutorial starts immediately after switching to tutorial mode (and no anymore only with the start of the next game).

2007-02-17 Nicolas Roffet <nicolas-kde@roffet.com>
	* Replaced the texts "H" and "R" by new symbols (SVG items).
	* Widget Background has now the standard WindowBackground user defined color.

2007-02-17 Nicolas Roffet <nicolas-kde@roffet.com>
	* Code optimisation and clean-up.
	* The GraphicsItem "ray result" is now a SVG picture.

2007-02-13 Nicolas Roffet <nicolas-kde@roffet.com>
	* Code optimisation and clean-up.

2007-02-10 Nicolas Roffet <nicolas-kde@roffet.com>
	* GUI: New GraphicsView item: laser ray. Now the player can see laser rays on the board to check if he placed the balls correctly on the board and to understand better how the interactions in the black box do work. At the end of the game, he can also see the laser rays of the solution.